--- a/browser/components/sessionstore/test/browser.ini
+++ b/browser/components/sessionstore/test/browser.ini
@@ -54,6 +54,7 @@ support-files =
 [browser_input.js]
 [browser_pageshow.js]
 [browser_sessionStorage.js]
+[browser_swapDocShells.js]
 [browser_tabStateCache.js]
 [browser_upgrade_backup.js]
 [browser_windowRestore_perwindowpb.js]
