--- a/mobile/android/base/tests/robocop.ini
+++ b/mobile/android/base/tests/robocop.ini
@@ -35,6 +35,8 @@ skip-if = processor == "x86"
 [testSharedPreferences]
 # [testThumbnails] # see bug 813107
 [testAddonManager]
+# disabled on x86 only; bug 936216
+skip-if = processor == "x86"
 # [testHistory] # see bug 915350
 # [testVkbOverlap] # see bug 907274
 [testDoorHanger]
@@ -58,6 +60,8 @@ skip-if = processor == "x86"
 [testDeviceSearchEngine]
 [testPrivateBrowsing]
 [testReaderMode]
+# disabled on x86 only; bug 936224
+skip-if = processor == "x86"
 [testGetUserMedia]
 [testHomeBanner]
 
