--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -7,6 +7,8 @@ support-files =
 
 [test_dataChannel_basicAudio.html]
 [test_dataChannel_basicAudioVideo.html]
+# Disabled on OS X for bug 930481 timeouts
+skip-if = os == 'mac'
 [test_dataChannel_basicAudioVideoCombined.html]
 [test_dataChannel_basicDataOnly.html]
 [test_dataChannel_basicVideo.html]
