--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -10,6 +10,8 @@ support-files =
 # Disabled on OS X for bug 930481 timeouts
 skip-if = os == 'mac'
 [test_dataChannel_basicAudioVideoCombined.html]
+# Disabled on OS X for bug 930481 timeouts
+skip-if = os == 'mac'
 [test_dataChannel_basicDataOnly.html]
 [test_dataChannel_basicVideo.html]
 [test_dataChannel_noOffer.html]
