--- a/dom/base/test/mochitest.ini
+++ b/dom/base/test/mochitest.ini
@@ -3,9 +3,9 @@ support-files =
   iframe_messageChannel_cloning.html
   iframe_messageChannel_pingpong.html
   iframe_messageChannel_post.html
+  file_empty.html
 
 [test_Image_constructor.html]
-[test_appname_override.html]
 [test_bug913761.html]
 [test_constructor-assignment.html]
 [test_constructor.html]
@@ -38,3 +38,4 @@ support-files =
 [test_writable-replaceable.html]
 [test_urlExceptions.html]
 [test_openDialogChromeOnly.html]
+[test_messagemanager_targetchain.html]
