--- a/browser/themes/windows/Makefile.in
+++ b/browser/themes/windows/Makefile.in
@@ -13,23 +13,23 @@ INSTALL_TARGETS += ICON
 # processor ourselves here with the marker specified. The resulting SVG files will get packaged by
 # the processing of the jar file in this directory.
 tab-selected-svg: $(srcdir)/../shared/tab-selected.svg
-	$(PYTHON) $(topsrcdir)/config/Preprocessor.py \
+	$(call py_action,preprocessor, \
 	  --marker "%" -D TAB_SIDE=start \
 	  $(ACDEFINES) \
-	  $(srcdir)/../shared/tab-selected.svg > tab-selected-start.svg
-	$(PYTHON) $(topsrcdir)/config/Preprocessor.py \
+	  $(srcdir)/../shared/tab-selected.svg > tab-selected-start.svg)
+	$(call py_action,preprocessor, \
 	  --marker "%" -D TAB_SIDE=end \
 	  $(ACDEFINES) \
-	  $(srcdir)/../shared/tab-selected.svg > tab-selected-end.svg
+	  $(srcdir)/../shared/tab-selected.svg > tab-selected-end.svg)
 # Same as above for aero.
-	$(PYTHON) $(topsrcdir)/config/Preprocessor.py \
+	$(call py_action,preprocessor, \
 	  --marker "%" -D TAB_SIDE=start -D WINDOWS_AERO \
 	  $(ACDEFINES) \
-	  $(srcdir)/../shared/tab-selected.svg > tab-selected-start-aero.svg
-	$(PYTHON) $(topsrcdir)/config/Preprocessor.py \
+	  $(srcdir)/../shared/tab-selected.svg > tab-selected-start-aero.svg)
+	$(call py_action,preprocessor, \
 	  --marker "%" -D TAB_SIDE=end -D WINDOWS_AERO \
 	  $(ACDEFINES) \
-	  $(srcdir)/../shared/tab-selected.svg > tab-selected-end-aero.svg
+	  $(srcdir)/../shared/tab-selected.svg > tab-selected-end-aero.svg)
 
 .PHONY: tab-selected-svg
 
