--- a/browser/base/content/test/general/browser.ini
+++ b/browser/base/content/test/general/browser.ini
@@ -9,6 +9,13 @@ support-files =
   blockPluginHard.xml
   blockPluginVulnerableNoUpdate.xml
   blockPluginVulnerableUpdatable.xml
+  browser_bug479408_sample.html
+  browser_bug678392-1.html
+  browser_bug678392-2.html
+  browser_clearplugindata.html
+  browser_clearplugindata_noage.html
+  browser_registerProtocolHandler_notification.html
+  browser_tab_dragdrop2_frame1.xul
   bug564387.html
   bug564387_video1.ogv
   bug564387_video1.ogv^headers^
@@ -17,6 +24,7 @@ support-files =
   bug792517.html
   bug792517.sjs
   bug839103.css
+  disablechrome.html
   discovery.html
   domplate_test.js
   download_page.html
@@ -104,6 +112,9 @@ run-if = crashreporter
 [browser_aboutHome.js]
 [browser_aboutSyncProgress.js]
 [browser_addKeywordSearch.js]
+[browser_addon_bar_aomlistener.js]
+[browser_addon_bar_close_button.js]
+[browser_addon_bar_shortcut.js]
 [browser_alltabslistener.js]
 [browser_blob-channelname.js]
 [browser_bookmark_titles.js]
@@ -139,7 +150,6 @@ skip-if = toolkit == "cocoa"
 [browser_bug462673.js]
 [browser_bug477014.js]
 [browser_bug479408.js]
-[browser_bug479408_sample.html]
 [browser_bug481560.js]
 [browser_bug484315.js]
 [browser_bug491431.js]
@@ -184,7 +194,10 @@ run-if = toolkit == "cocoa"
 [browser_bug595507.js]
 [browser_bug596687.js]
 [browser_bug597218.js]
+[browser_bug598923.js]
+[browser_bug599325.js]
 [browser_bug609700.js]
+[browser_bug616836.js]
 [browser_bug623155.js]
 [browser_bug623893.js]
 [browser_bug624734.js]
@@ -192,8 +205,6 @@ run-if = toolkit == "cocoa"
 [browser_bug655584.js]
 [browser_bug664672.js]
 [browser_bug676619.js]
-[browser_bug678392-1.html]
-[browser_bug678392-2.html]
 [browser_bug678392.js]
 [browser_bug710878.js]
 [browser_bug719271.js]
@@ -225,15 +236,15 @@ run-if = toolkit == "cocoa"
 [browser_bug902156.js]
 [browser_bug906190.js]
 [browser_canonizeURL.js]
-[browser_clearplugindata.html]
 [browser_clearplugindata.js]
-[browser_clearplugindata_noage.html]
 [browser_contentAreaClick.js]
 [browser_contextSearchTabPosition.js]
 [browser_ctrlTab.js]
+[browser_customize.js]
 [browser_customize_popupNotification.js]
 [browser_datareporting_notification.js]
 run-if = datareporting
+[browser_disablechrome.js]
 [browser_discovery.js]
 [browser_duplicateIDs.js]
 [browser_drag.js]
@@ -294,10 +305,6 @@ skip-if = true  # disabled until the tree view is added
 [browser_tab_drag_drop_perwindow.js]
 [browser_tab_dragdrop.js]
 [browser_tab_dragdrop2.js]
-[browser_tab_dragdrop2_frame1.xul]
-[browser_tabbar_big_widgets.js]
-skip-if = os == "linux" # No tabs in titlebar on linux
-
 [browser_tabfocus.js]
 [browser_tabopen_reflows.js]
 [browser_tabs_isActive.js]
@@ -319,9 +326,7 @@ skip-if = os == "linux" # No tabs in titlebar on linux
 [browser_visibleTabs_bookmarkAllTabs.js]
 [browser_visibleTabs_contextMenu.js]
 [browser_visibleTabs_tabPreview.js]
-[browser_windowopen_reflows.js]
 [browser_wyciwyg_urlbarCopying.js]
 [browser_zbug569342.js]
 [browser_registerProtocolHandler_notification.js]
-[browser_registerProtocolHandler_notification.html]
 [browser_no_mcb_on_http_site.js]
