--- a/dom/indexedDB/test/mochitest.ini
+++ b/dom/indexedDB/test/mochitest.ini
@@ -2,7 +2,6 @@
 support-files =
   bfcache_iframe1.html
   bfcache_iframe2.html
-  blob_worker_crash_iframe.html
   error_events_abort_transactions_iframe.html
   event_propagation_iframe.html
   exceptions_in_events_iframe.html
@@ -27,7 +26,6 @@ support-files =
 [test_bfcache.html]
 [test_blob_archive.html]
 [test_blob_simple.html]
-[test_blob_worker_crash.html]
 [test_clear.html]
 [test_complex_keyPaths.html]
 [test_count.html]
@@ -60,7 +58,7 @@ support-files =
 [test_filehandle_store_snapshot.html]
 [test_getAll.html]
 [test_get_filehandle.html]
-[test_globalObjects.html]
+[test_globalObjects_content.html]
 [test_global_data.html]
 [test_index_empty_keyPath.html]
 [test_index_getAll.html]
