--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -789,6 +789,10 @@ DOMInterfaces = {
     'nativeType': 'mozilla::dom::CellBroadcast',
 },
 
+'MozIcc': {
+    'nativeType': 'mozilla::dom::Icc',
+},
+
 'MozMobileConnectionArray': {
     'nativeType': 'mozilla::dom::network::MobileConnectionArray',
     'resultNotAddRefed': [ 'item' ]
